--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*front*/
 body{
     background-image: url(./images/dairyfarm.jpeg);
     background-repeat: no-repeat;
@@ -7,11 +8,22 @@ body{
     text-align: center;
     font-size: 40px;
     padding: 10px;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
 }
 .sidebar{
     text-align: center;
     font-size: 28px;
+}
+.farm {
+    text-align: center;
+    box-sizing: border-box;
+    box-shadow: 20px;
+    background-color: orange;
+    border-radius: 30px;
+}
+.farm p{
+    font-size: 24px;
+    font-weight: 600;
 }
 button{
     background-color: rgb(255, 136, 0);
@@ -21,6 +33,8 @@ button{
 .sidebar .production{
     padding-bottom: 50px;
 }
+
+/*form*/
 .display{
     text-align: center;
     padding-bottom: 20px;
@@ -30,6 +44,8 @@ button{
     text-align: center;
     padding-top: 150px;
 }
+
+/*report*/
 .reporting {
     font-size: 30px;
     text-align: center;
